keycloak refactor use contributor pattern for attribute updats/syncs